--- a/app/views/pages/_activity_log.html.haml
+++ b/app/views/pages/_activity_log.html.haml
@@ -31,7 +31,7 @@
   }
   
 %h4
-  = I18n.t(:home_activity_log)
+  = link_to "#{I18n.t(:home_activity_log)}", {:controller => "log_activities", :action => "index"}
   %span.badge
     = @act_no
 %hr
