--- a/app/views/pages/_top_rated_books.html.haml
+++ b/app/views/pages/_top_rated_books.html.haml
@@ -1,5 +1,5 @@
 %h4
-  = link_to "#{I18n.t(:top_rated)}",{:controller => :books, :action => :index, :sort_type => "views desc"}
+  = link_to "#{I18n.t(:top_rated)}",{:controller => :books, :action => :index, :sort_type => "rate desc"}
 %hr
 - if (@top_rated_response != '' && @top_rated_response['response']['numFound'] > 0)
   - @number = 0
@@ -18,7 +18,8 @@
       - @doc = doc
  
     .col-md-2
-      %img.img-thumbnail{:src => @thumb}
+      = link_to :controller => :books, :action => :show, :id => @vol.job_id do
+        %img.img-thumbnail{:src => @thumb}
     .col-md-6
       %h4
         = link_to @title, {:controller => :books, :action => :show, :id => @vol.job_id}
