--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -1,12 +1,57 @@
-.page
-  .page_border
-    - if (@user_collections != '' && @user_collections_total_number > 0)
-      .count
-        = "Found #{pluralize(@user_collections_total_number, I18n.t(:collection))} "
-      - @user_collections.each do |collection|
-        = render :partial => "collections/collection", :locals => {:with_rate => 2, :collection => collection}
-      - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
-        - @pages = adjustPaging(@page, @lastPage)
-        = render :partial => "books/paging"
-    - else
-      = I18n.t(:no_collections_found)
+:javascript
+  function confirmDelete(){
+    var r = confirm("#{I18n.t(:delete_collection_confirm)}");
+    return r;
+  }
+  
+%h4
+  = I18n.t(:user_collection_title)
+  %span.badge
+    = @total_number
+%hr
+-@collections.each do |item|
+  :javascript
+    $(document).ready(function(){
+      $("#starsidelink_#{item.id}").jRating({
+        isDisabled : true
+      });
+    });
+  - if(item.photo_name.blank?)
+    - thumb = "images_#{I18n.locale}/nocollection140.png"
+  - else
+    - thumb = item.photo_name_url(:thumb)
+  .row
+    .col-md-2
+      = link_to image_tag("/#{thumb}") , {:controller => :collections, :action => :show, :id => item.id}
+    .col-md-7
+      %h4
+        = item.title
+      .date.text-muted
+        %small
+          %b
+            = I18n.t(:user_collection_added_on)
+          = item.created_at
+    .col-md-3.controls
+      
+      %ul.fa-ul.tools
+        - if (item.user_id == session[:user_id])
+          %li
+            %i.fa.fa-li.fa-trash-o
+            %small
+              = link_to I18n.t(:delete), {:controller => :collections, :action => :destroy_collection, :id => @vol.id,
+                 :user_id => item[:user_id],:id => item[:user_id], :page => @page},
+                 :onclick => "return confirmDelete()"
+        %li
+          %i.fa.fa-li.fa-info
+          %small
+            = link_to "#{I18n.t(:book_details_details)}" , 
+              {:controller => :collections, :action => :show, :id => item.id}    
+      - if @item.rate != 0.0
+        .starsidelink{:id => "starsidelink_#{item.id}", :data => "#{item.rate}"}    
+    .clearfix
+    %hr
+- if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
+  .col-md-8
+    .pagination-centered
+      - @pages = adjustPaging(@page, @lastPage)
+      = render :partial => "books/paging"
