remove line debugger

--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -38,7 +38,7 @@
           %li
             %i.fa.fa-li.fa-trash-o
             %small
-              = link_to I18n.t(:delete), {:controller => :collections, :action => :destroy_collection, :id => @vol.id,
+              = link_to I18n.t(:delete), {:controller => :collections, :action => :destroy_collection, :id => item.id,
                  :user_id => item[:user_id],:id => item[:user_id], :page => @page},
                  :onclick => "return confirmDelete()"
         %li
@@ -46,7 +46,7 @@
           %small
             = link_to "#{I18n.t(:book_details_details)}" , 
               {:controller => :collections, :action => :show, :id => item.id}    
-      - if @item.rate != 0.0
+      - if item.rate != 0.0
         .starsidelink{:id => "starsidelink_#{item.id}", :data => "#{item.rate}"}    
     .clearfix
     %hr
