--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,27 +9,28 @@
   .col-md-12.column
     %h2
       = @page_title
-    %hr  
+    %hr
+.row.clearfix  
   .col-md-3
     %ul.nav.nav-pills.nav-stacked
       %li
         %a#tab_profile{:href => "/users/#{@user.id}/profile"}
           = I18n.t(:user_profile_tab)    
-      %li
-        %a#tab_annotations{:href=>"/users/#{@user.id}/annotations"}
-          = I18n.t(:user_annotations_tab)
-      %li
-        %a#tab_queries{:href=>"/users/#{@user.id}/queries"}
-          = I18n.t(:user_queries_tab)
-      %li
-        %a#tab_history{:href=>"/users/#{@user.id}/history"}
-          = I18n.t(:user_history_tab)
+      - if !session[:user_id].nil? && params[:id].to_i == session[:user_id]
+        %li
+          %a#tab_annotations{:href=>"/users/#{@user.id}/annotations"}
+            = I18n.t(:user_annotations_tab)
+        %li
+          %a#tab_queries{:href=>"/users/#{@user.id}/queries"}
+            = I18n.t(:user_queries_tab)
+        %li
+          %a#tab_history{:href=>"/users/#{@user.id}/history"}
+            = I18n.t(:user_history_tab)
       %li
         %a#tab_activity{:href=>"/users/#{@user.id}/activity"}
           = I18n.t(:user_activity_tab)
       %li
         %a#tab_activity{:href=>"/users/#{@user.id}/collections"}
           = I18n.t(:user_collections_tab)          
-  .row.clearfix
-    .col-md-8.column
-      =render :partial => "users/#{@tab}"
+  
+  =render :partial => "users/#{@tab}"
