--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -3,55 +3,55 @@
     var r = confirm("#{I18n.t(:delete_collection_confirm)}");
     return r;
   }
-  
-%h4
-  = I18n.t(:user_collection_title)
-  %span.badge
-    = @total_number
-%hr
--@collections.each do |item|
-  :javascript
-    $(document).ready(function(){
-      $("#starsidelink_#{item.id}").jRating({
-        isDisabled : true
+.col-md-8.column  
+  %h4
+    = I18n.t(:user_collection_title)
+    %span.badge
+      = @total_number
+  %hr
+  -@collections.each do |item|
+    :javascript
+      $(document).ready(function(){
+        $("#starsidelink_#{item.id}").jRating({
+          isDisabled : true
+        });
       });
-    });
-  - if(item.photo_name.blank?)
-    - thumb = "images_#{I18n.locale}/nocollection140.png"
-  - else
-    - thumb = item.photo_name_url(:thumb)
-  .row
-    .col-md-2
-      = link_to image_tag("/#{thumb}") , {:controller => :collections, :action => :show, :id => item.id}
-    .col-md-7
-      %h4
-        = item.title
-      .date.text-muted
-        %small
-          %b
-            = I18n.t(:user_collection_added_on)
-          = item.created_at
-    .col-md-3.controls
-      
-      %ul.fa-ul.tools
-        - if (item.user_id == session[:user_id])
-          %li
-            %i.fa.fa-li.fa-trash-o
-            %small
-              = link_to I18n.t(:delete), {:controller => :collections, :action => :destroy_collection, :id => item.id,
-                 :user_id => item[:user_id],:id => item[:user_id], :page => @page},
-                 :onclick => "return confirmDelete()"
-        %li
-          %i.fa.fa-li.fa-info
+    - if(item.photo_name.blank?)
+      - thumb = "images_#{I18n.locale}/nocollection140.png"
+    - else
+      - thumb = item.photo_name_url(:thumb)
+    .row
+      .col-md-2
+        = link_to image_tag("/#{thumb}") , {:controller => :collections, :action => :show, :id => item.id}
+      .col-md-7
+        %h4
+          = item.title
+        .date.text-muted
           %small
-            = link_to "#{I18n.t(:book_details_details)}" , 
-              {:controller => :collections, :action => :show, :id => item.id}    
-      - if item.rate != 0.0
-        .starsidelink{:id => "starsidelink_#{item.id}", :data => "#{item.rate}"}    
-    .clearfix
-    %hr
-- if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
-  .col-md-8
-    .pagination-centered
-      - @pages = adjustPaging(@page, @lastPage)
-      = render :partial => "books/paging"
+            %b
+              = I18n.t(:user_collection_added_on)
+            = item.created_at
+      .col-md-3.controls
+        
+        %ul.fa-ul.tools
+          - if (item.user_id == session[:user_id])
+            %li
+              %i.fa.fa-li.fa-trash-o
+              %small
+                = link_to I18n.t(:delete), {:controller => :collections, :action => :destroy_collection, :id => item.id,
+                   :user_id => item[:user_id],:id => item[:user_id], :page => @page},
+                   :onclick => "return confirmDelete()"
+          %li
+            %i.fa.fa-li.fa-info
+            %small
+              = link_to "#{I18n.t(:book_details_details)}" , 
+                {:controller => :collections, :action => :show, :id => item.id}    
+        - if item.rate != 0.0
+          .starsidelink{:id => "starsidelink_#{item.id}", :data => "#{item.rate}"}    
+      .clearfix
+      %hr
+  - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
+    .col-md-8
+      .pagination-centered
+        - @pages = adjustPaging(@page, @lastPage)
+        = render :partial => "books/paging"
