home pages with tabs

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -70,7 +70,7 @@ h1, h2, h3, h4
   border-left: 1px solid #CCC
 
 .active
-  background-color: #9a71a6 !Important
+  ////background-color:#9a71a6 !Important;
 
 .controls
   background-color: #f6f6f6
@@ -280,7 +280,21 @@ a
     margin-right: 10px
     img
       margin-bottom: 10px
-      
+
+.tabs
+  margin-top: 10px
+  .active!
+  .tab-content
+    padding-top: 30px
+  .nav-tabs
+    border-bottom: 1px solid #eeeeee
+    font-family: Georgia
+    font-weight: bold
+    color: #7c7c7c
+    li.active a
+      border: 1px solid #eeeeee
+      border-bottom-color: transparent
+      background-color: white
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
 // This is the default Tooltipster theme (feel free to modify or duplicate and create multiple themes!):
