--- a/app/views/pages/_most_viewed_books.html.haml
+++ b/app/views/pages/_most_viewed_books.html.haml
@@ -1,6 +1,3 @@
-%h4
-  = link_to "#{I18n.t(:most_viewed)}",{:controller => :books, :action => :index, :sort_type => "views desc"}
-%hr
 - if (@most_viewed_response != '' && @most_viewed_response['response']['numFound'] > 0)
   - @number = 0
   - @most_viewed_response['response']['docs'].each do |doc|
@@ -35,3 +32,5 @@
       =render :partial => "books/sidelinks"
     .clearfix 
     %hr
+  .pull-right  
+    = link_to "#{I18n.t(:tabs_more)}", {:controller => :books, :action => :index, :sort_type => "views desc"}
