--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,8 @@
 :javascript
+  function confirmDelete(text){
+    var r = confirm(text);
+    return r;
+  }
   $(document).ready(function() {
     gettabclass();
   });
