--- a/app/views/users/_history.html.haml
+++ b/app/views/users/_history.html.haml
@@ -1,8 +1,3 @@
-:javascript
-  function confirmDelete(){
-    var r = confirm("#{I18n.t(:remove_book_from_history_confirm)}");
-    return r;
-  }
 .col-md-8.column
   %h4
     = I18n.t(:user_history_title)
@@ -43,7 +38,7 @@
               %small
                 = link_to I18n.t(:delete), {:controller => :users, :action => :remove_book_history, :volume_id => @vol[:id],
                    :user_id => item[:user_id],:id => item[:user_id], :page => @page},
-                   :onclick => "return confirmDelete()"
+                   :onclick => "return confirmDelete(\"#{I18n.t(:remove_book_from_history_confirm)}\")"
           %li
             %i.fa.fa-li.fa-book
             %small
