--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -4,6 +4,13 @@
       $( "#change_password").toggle();
       $( "#change_password_block").toggle();
   });
+  
+      $( "#clear" ).click(function() {
+      $('#photo_ext_error_message').removeClass("visible_error_msg");
+      $('#photo_size_error_message').removeClass("visible_error_msg");
+       $('#photo_ext_error_message').addClass("invisible_error_msg");
+      $('#photo_size_error_message').addClass("invisible_error_msg");
+  });
   });
     
   function check_image_size() {
@@ -105,4 +112,4 @@
             .col-sm-2
             .col-sm-10
               = f.submit I18n.t('submit_buton'), :class => "btn btn-primary"
-              = f.submit I18n.t('clear_button'), :class => "btn btn-default", :type => "reset"
+              = f.submit I18n.t('clear_button'), :class => "btn btn-default",:id => "clear", :type => "reset"
