--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -275,7 +275,7 @@ a
     background-color: #6d4479
     border-color: #6d4479
   .collection
-    height: 220px
+    height: 225px
     overflow: hidden
     margin-right: 10px
     img
@@ -529,4 +529,22 @@ fieldset
   color: red
 .invisible_error_msg
   display: none
-  
+
+/*USER RATING*/
+.starrating
+  background: url("/images_en/userstar.png") 0 0
+  width: 25px
+  height: 23px
+  display: inline
+  float: left
+.on
+  background-position: 0 25px
+.shine
+  background-position: 0 50px
+.userbookrate
+  width: 125px
+  display: inline
+  float: right
+.usercollectionrate
+  width: 125px
+/* END OF USER RATING*/
