--- a/app/views/collections/_collectionbooks.html.haml
+++ b/app/views/collections/_collectionbooks.html.haml
@@ -41,10 +41,16 @@
                   = link_to "#{I18n.t(:col_book_move_up)} ", 
                   {:controller => :collections, :action => :move_up, :volume_collection_id => @ubh_vol.id}  
               - if @ubh_vol.position < @total_number
-                %i.fa.fa-arrow-down 
-                %small
-                  = link_to  " #{I18n.t(:col_book_move_down)}", 
-                  {:controller => :collections, :action => :move_down, :volume_collection_id => @ubh_vol.id}
+                - if @ubh_vol.position == 1
+                  %i.fa.fa-li.fa-arrow-down 
+                  %small
+                    = link_to "#{I18n.t(:col_book_move_down)}", 
+                      {:controller => :collections, :action => :move_down, :volume_collection_id => @ubh_vol.id}
+                - else
+                  %i.fa.fa-arrow-down 
+                  %small
+                  = link_to " #{I18n.t(:col_book_move_down)}", 
+                    {:controller => :collections, :action => :move_down, :volume_collection_id => @ubh_vol.id}
             %li
               %i.fa.fa-li.fa-trash-o
               %small
@@ -61,9 +67,12 @@
             %small
               = link_to "#{I18n.t(:book_details_details)}" , 
                 {:controller => :books, :action => :show, :id => @vol.job_id}    
+        .rate
+          %span.text-muted.pull-right
+            %small
+              = "#{pluralize(@book[:views], I18n.t(:sidelinks_views))} "
         - if @book['rate'] != 0.0
           .starsidelink{:id => "starsidelink_#{@vol.job_id}", :data => "#{@book['rate']}"}
-        %small
-          = "#{pluralize(@book[:views], I18n.t(:sidelinks_views))} "
+        
       .col-md-8.clearfix
         %hr
