--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -40,7 +40,8 @@
         .rate.center-block
           %span.text-muted
             = I18n.t(:collection_your_rate)
-          Rate to be added here
+          .usercollectionrate
+            = render :partial => "collections/rating"
     .clearfix
     %hr    
 .row.clearfix
