--- a/app/views/names/get_content.html.haml
+++ b/app/views/names/get_content.html.haml
@@ -1,12 +1,13 @@
-%center
-  %h3= @name  
-  = link_to I18n.t(:species_details), "http://www.eol.org/pages/#{@taxon_concept_id}", :target => "_blank"
-  %br
-  %br
-  - if @image
-    = image_tag @image, :width => 200
-  - else
-    = "No Image"
-  %br
-  %br
-  = link_to I18n.t(:name_found_in_books, :count => @books_count), books_path(:params => addFacetSearch({}, 'name', @name))
+.spacing-left.panel.panel-styled
+  .panel-heading
+    %h3.panel-title
+      = @name
+  .panel-body
+    %center
+      = link_to I18n.t(:species_details), "http://www.eol.org/pages/#{@taxon_concept_id}", :target => "_blank"
+      %br
+      - if @image
+        = image_tag @image, :width => 200
+        %br
+      %br
+      = link_to I18n.t(:name_found_in_books, :count => @books_count), books_path(:params => addFacetSearch({}, 'name', @name))
