hompepage design editting

--- a/app/views/pages/_get_activity_log.html.haml
+++ b/app/views/pages/_get_activity_log.html.haml
@@ -10,7 +10,7 @@
       {:controller => :users, :action => :show, :id => @owner_of_activity.id}, 
       :class => "pull-left"
     .media-body.activity-log
-      %p
+      %p{:style => "line-height:120%;font-size:12px;"}
         = log[:record].html_safe
   %hr
 
