--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -12,12 +12,12 @@
         });
       });
     - if(item.photo_name.blank?)
-      - thumb = "images_#{I18n.locale}/nocollection140.png"
+      - thumb = "/images_#{I18n.locale}/nocollection140.png"
     - else
       - thumb = item.photo_name_url(:thumb)
     .row
       .col-md-2
-        = link_to image_tag("/#{thumb}") , {:controller => :collections, :action => :show, :id => item.id}
+        = link_to image_tag("#{thumb}") , {:controller => :collections, :action => :show, :id => item.id}
       .col-md-7
         %h4
           = item.title
