--- a/app/views/collections/edit.html.haml
+++ b/app/views/collections/edit.html.haml
@@ -13,7 +13,7 @@
           .form-group
             = f.label :description, raw(t('description')), :class => 'col-sm-2 control-label'
             .col-sm-10
-              = f.text_area :description, :class => 'form-control', :name => "", :cols => "", :rows => ""
+              = f.text_area :description, :class => 'form-control',:cols => "", :rows => ""
           .form-group
             %label{:class => 'col-sm-2 control-label'}
               = I18n.t(:upload_collection_photo)
