--- a/app/views/collections/_collectionbooks.html.haml
+++ b/app/views/collections/_collectionbooks.html.haml
@@ -1,6 +1,6 @@
 :javascript  
-  function confirmDelete(id){
-  var r= confirm("#{I18n.t(:delete_book_from_collection_confirm)}");
+  function confirmBookDeleteFromCollection(){
+  var r= confirm("#{I18n.t(:remove_book_from_collection_confirm)}");
     return r;
   }
 - if (@collection_volumes != '' && @total_number > 0)
@@ -56,7 +56,7 @@
               %small
                 = link_to "#{I18n.t(:col_book_trash)}" , 
                 {:controller => :collections, :action => :delete_book, :volume_collection_id => @ubh_vol.id}, 
-                :onclick => "return confirmDelete(#{@ubh_vol.id})" 
+                :onclick => "return confirmBookDeleteFromCollection()" 
           %li
             %i.fa.fa-li.fa-book
             %small
@@ -76,3 +76,6 @@
         
       .col-md-8.clearfix
         %hr
+- else
+  %h4
+    = I18n.t(:no_books_found)
