--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -34,7 +34,7 @@
               %i.fa.fa-li.fa-trash-o
               %small
                 = link_to I18n.t(:delete), {:controller => :collections, :action => :destroy_collection, :id => item.id,
-                   :user_id => item[:user_id],:id => item[:user_id], :page => @page},
+                   :user_id => item[:user_id],:id => item.id, :page => @page},
                    :onclick => "return confirmDelete(\"#{I18n.t(:delete_collection_confirm)}\")"
           %li
             %i.fa.fa-li.fa-info
