--- a/app/views/users/_queries.html.haml
+++ b/app/views/users/_queries.html.haml
@@ -7,10 +7,15 @@
   %ul.list-group
     - @queries.each do |query|
       %li.list-group-item
-        %a{:href => "/user_search_history/delete_query?id=#{query.id}", :onclick => "return confirmDelete(\"#{I18n.t(:delete_saved_query_confirm)}\");"}
+        %a{:href => "/user_search_history/delete_query/#{query.id}", :onclick => "return confirmDelete(\"#{I18n.t(:delete_saved_query_confirm)}\");"}
           %i.fa.fa-times-circle
         = "#{parse_query(query.string)}".html_safe        
         %span.badge
           = "#{get_number_of_returned_books(query.string)}".html_safe
         %a{:href => "books?#{query.string}"}
           %i.fa.fa-arrow-right
+  - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
+    .col-md-8
+      .pagination-centered
+        - @pages = adjustPaging(@page, @lastPage)
+        = render :partial => "books/paging"
