--- a/app/views/collections/edit.html.haml
+++ b/app/views/collections/edit.html.haml
@@ -19,8 +19,7 @@
               = I18n.t(:upload_collection_photo)
             .col-sm-10
               = f.file_field :photo_name, :class => "btn btn-default"
-              %p.help-block
-                = I18n.t(:collection_help_block)
+              %p.help-block #{I18n.t(:max_photo_size)} #{UPLOADED_PHOTO_MAX_SIZE} #{I18n.t(:mb)}
           .form-group
             .col-sm-offset-2.col-sm-10
               %div
