--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -34,7 +34,7 @@
         %a#tab_activity{:href=>"/users/#{@user.id}/activity"}
           = I18n.t(:user_activity_tab)
       %li
-        %a#tab_activity{:href=>"/users/#{@user.id}/collections"}
+        %a#tab_collections{:href=>"/users/#{@user.id}/collections"}
           = I18n.t(:user_collections_tab)          
   
   =render :partial => "users/#{@tab}"
