--- a/app/views/users/_queries.html.haml
+++ b/app/views/users/_queries.html.haml
@@ -12,7 +12,7 @@
         = "#{parse_query(query.string)}".html_safe        
         %span.badge
           = "#{get_number_of_returned_books(query.string)}".html_safe
-        %a{:href => "books?#{query.string}"}
+        %a{:href => "/books?#{query.string}"}
           %i.fa.fa-arrow-right
   - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
     .col-md-8
