--- a/app/views/users/_activity.html.haml
+++ b/app/views/users/_activity.html.haml
@@ -8,7 +8,7 @@
     - if !item.nil?
       - @user = User.find(item[:user])
       - if(@user.photo_name.blank?)
-        - @thumb = "/images_#{I18n.locale}/nocollection140.png"
+        - @thumb = "/images_#{I18n.locale}/user.png"
       - else
         - @thumb = @user.photo_name_url(:thumb)
       .media
