--- a/app/views/users/_profile.html.haml
+++ b/app/views/users/_profile.html.haml
@@ -9,7 +9,7 @@
 %blockquote
   .col-md-2.column.pull-right
     - if(@user.photo_name.blank?)
-      - @thumb = "images_#{I18n.locale}/nocollection140.png"
+      - @thumb = "/images_#{I18n.locale}/user.png"
     - else
       - @thumb = @user.photo_name_url(:thumb)
     = image_tag("#{@thumb}",:class => "img-thumbnail")
